<resources>
    <string name="app_name">Covid-19 Info</string>
    <string name="Bottom_Nav_Guidelines">Guidelines</string>
    <string name="Bottom_Nav_Statistics">Statistieken</string>
    <string name="Bottom_Nav_Feed">Feed</string>
    <string name="Bottom_Nav_Advice">Advies</string>
    <string name="SearchCountry">zoek een land</string>
    <string name="ConnectionErrorString">Het is niet gelukt om de server te bereiken. Bezig met het nogmaals te proberen...</string>
    <string name="DefaultStatisticsTitleAppendix">Wereldwijd</string>
    <string name="TotalRecoveries">Totaal aantal herstelgevallen</string>
    <string name="NewRecoveries">Aantal nieuwe herstelgevallen</string>
    <string name="TotalDeaths">Totaal aantal sterfgevallen</string>
    <string name="NewDeaths">Aantal nieuwe sterfgevallen</string>
    <string name="TotalConfirmed">Totaal aantal besmettingen</string>
    <string name="NewConfirmed">Aantal nieuwe besmettingen</string>
    <string name="tvFirstQuestion">U hoeft niet naar de dokter\\nOp basis van de door u ingevulde gegevens en de RIVM richtlijnen lijkt er voor nu geen reden om de dokter te bellen voor vragen over het coronavirus.</string>
    <string name="advise">Ons Advies:\\nDoe geen boodschappen en ontvang geen bezoek. Heeft u huisgenoten, dan mogen zij ook niet naar buiten. Als uitzondering hierop mogen alleen huisgenoten die geen klachten hebben even boodschappen doen. Als iedereen 24 uur geen klachten heeft, mag u weer naar buiten. Voor meer informatie klik op onderstaande button. Zorg dat u anderen niet besmet. Houd dus afstand tot andere mensen. Houdt de komende 14 dagen uw gezondheid in de gaten. Bel alleen met de huisarts als de klachten verergeren en u medische hulp nodig hebt: verkoudheidsklachten met koorts (38 graden Celsius of hoger) en/of benauwdheid.</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="restart">Opnieuw</string>
    <string name="title_activity_heatmap">Heatmap</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDeygv5CawLp1vPU44MlR4_mJ92uPSONvA</string>
    <string name="Loading">Bezig met laden...</string>
    <string name="readmore">Lees meer</string>
<!--    //remove lorem ipsum-->
    <string name="lorem">Lorem Ipsum</string>
    <string name="info">Informatie</string>
</resources>
