<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.evan.myfinancecontrol.ui.MainActivity">
    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/ic_feed_black_24dp"
        android:title="@string/Bottom_Nav_Feed" />
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_statistics_black_24dp"
        android:title="@string/Bottom_Nav_Statistics" />
    <item
        android:id="@+id/guidelinesFragment"
        android:icon="@drawable/ic_guidelines_black_24dp"
        android:title="@string/Bottom_Nav_Guidelines" />
    <item
        android:id="@+id/adviceFragment"
        android:icon="@drawable/ic_advice_black_24dp"
        android:title="@string/Bottom_Nav_Advice" />
</menu>