<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.team1.covid19info.ui.feed.FeedFragment"
        android:label="@string/Bottom_Nav_Feed"
        tools:layout="@layout/fragment_feed"/>

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.team1.covid19info.ui.statistics.StatisticsFragment"
        android:label="@string/Bottom_Nav_Statistics"
        tools:layout="@layout/fragment_statistics"/>

    <fragment
        android:id="@+id/guidelinesFragment"
        android:name="com.team1.covid19info.ui.guidelines.GuidelinesFragment"
        android:label="@string/Bottom_Nav_Guidelines"
        tools:layout="@layout/fragment_guidelines"/>

    <fragment
        android:id="@+id/adviceFragment"
        android:name="com.team1.covid19info.ui.advice.AdviceFragment"
        android:label="@string/Bottom_Nav_Advice"
        tools:layout="@layout/fragment_advice"/>

</navigation>